fixed overflow background

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,20 +31,29 @@ $mobile-padding: 1em 1.5em 0;
 
 html {
     font-family: "IBM Plex Sans", sans-serif;
+    width: 100vw;
 }
 body {
-
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .background {
+    &-wrap {
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+        position: relative;
+    }
+    width: 100%;
     position: absolute;
     top: -23em;
     bottom: 0;
-    left: 0;
-    right: -34em;
+    // left: 16em;
+    left: 30%;
+    right: 0;
     background: url("../assets/bg-main-mobile.png") right top/100% 100% no-repeat; 
+
 }
 .header {
     height: 10em;
@@ -170,7 +179,6 @@ body {
         padding: 1em 4em 0;
         // @include mi.background-image("../assets/bg-main-tablet.png");
         .background {
-            right: 0;
             top: -12em;
             left: -25em;
             background: url(../assets/bg-main-tablet.png) left top/110% 90% no-repeat;
